--- a/src/components/passgen/passgen.module.css
+++ b/src/components/passgen/passgen.module.css
@@ -7,17 +7,13 @@
 
 .section {
 	margin: auto;
+	padding: 1rem;
 
 	width: 95%;
 	height: 70%;
 
 	border-radius: 25px;
-
 	background-color: var(--primary-color);
-}
-
-.button {
-	background-color: var(--primary-color-light);
 }
 
 @media only screen and (min-width: 600px) {
