--- a/src/components/passgen/options/options.module.css
+++ b/src/components/passgen/options/options.module.css
@@ -1,7 +1,9 @@
 .options {
 	padding: 2rem;
 
+	height: 100%;
+
 	display: flex;
 	flex-direction: column;
-	gap: 2rem;
+	justify-content: space-around;
 }
