--- a/src/components/passgen/passgen.module.css
+++ b/src/components/passgen/passgen.module.css
@@ -14,6 +14,10 @@
 
 	border-radius: 25px;
 	background-color: var(--primary-color);
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
 @media only screen and (min-width: 600px) {
