--- a/src/components/passgen/passgen.module.css
+++ b/src/components/passgen/passgen.module.css
@@ -14,6 +14,7 @@
 
 	border-radius: 25px;
 	background-color: var(--primary-color);
+	box-shadow: 0px 5px 10px black;
 
 	display: flex;
 	flex-direction: column;
