--- a/src/components/passgen/options/toggle/toggle.module.css
+++ b/src/components/passgen/options/toggle/toggle.module.css
@@ -2,6 +2,8 @@
 	--toggle-ht: 4rem;
 	--thumb-wd: 4rem;
 	--slide-anim: width .5s;
+
+	padding-block: 1rem;
 	
 	width: 100%;
 
@@ -9,6 +11,7 @@
 
 	display: flex;
 	align-items: center;
+	gap: 2rem;
 }
 
 .label {
