--- a/src/components/passgen/passgen.module.css
+++ b/src/components/passgen/passgen.module.css
@@ -1,6 +1,6 @@
 .main {
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 
 	background-color: var(--secondary-color);
 }
@@ -10,7 +10,6 @@
 	padding: 1rem;
 
 	width: 95%;
-	height: 70%;
 
 	border-radius: 25px;
 	background-color: var(--primary-color);
@@ -21,5 +20,20 @@
 	justify-content: space-around;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
+	.section{
+		width: 50%;
+	}
+}
+
+@media only screen and (min-width: 992px) {
+	.section {
+		width: 30%;
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.section {
+		width: 25%;
+	}
 }
