--- a/src/components/passgen/pw_display/pw_display.module.css
+++ b/src/components/passgen/pw_display/pw_display.module.css
@@ -1,9 +1,12 @@
 .pw-display {
+	padding: 2rem;
+
 	height: 100%;
 
 	display: flex;	
 	flex-direction: column;
 	justify-content: space-around;
+	gap: 2rem;
 }
 
 .pw-text {
