Password is generated when options are changed

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -12,6 +14,7 @@ html {
 
 	--secondary-color: #191923;
 
+	font-family: 'VT323';
 	font-size: 8px;
 }
 
