--- a/src/components/passgen/options/range/range.module.css
+++ b/src/components/passgen/options/range/range.module.css
@@ -49,7 +49,9 @@
 	background-color: var(--primary-color-dark);
 
 	outline: none;
+
 	appearance: none;
+	-webkit-appearance: none;
 }
 
 .range::-webkit-slider-thumb {
@@ -66,6 +68,7 @@
 
 	appearance: none;
 	
+	-webkit-transition: .1s;
 	transition: transform 0.1s;
 }
 
